Regression fix for ARIA grid

On Mac, expose ARIA grid as AXTable, not AXGrid, which is reported as a listbox
by VoiceOver.

Bug: 753925
Change-Id: I33da3d68b50cdd17034ce083894a1ac178c64e9f
Reviewed-on: https://chromium-review.googlesource.com/610362
Reviewed-by: David Tseng <dtseng@chromium.org>
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493757}
Former-commit-id: 63a6c9032333566b7bb370391031fa1ffe22ccae